<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kieranwaugh.myapplication.MainActivity">
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:title="Sign Out"
        app:showAsAction="never"
        />
</menu>